<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".LogonActivity">



    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/logobancoalcala" />

    <EditText
        android:id="@+id/txtCuenta"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/imglogo"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/numero_de_cuenta"
        android:inputType="textPersonName"
        android:textSize="16dp" />



    <EditText
        android:id="@+id/txtPIN"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="221dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="PIN"
        android:inputType="textPassword"
        android:textSize="16dp" />



    <TextView
        android:id="@+id/txtRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp"
        android:text="@string/registrarse"
        android:onClick="onClick"
        android:clickable="true"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="158dp"
        android:background="@color/colorAccent"
        android:shadowRadius="@android:integer/config_longAnimTime"
        android:text="@string/Login" />

</RelativeLayout>