<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true"
    tools:context=".AltaCuentasActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logobancoalcala"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal" />

        <EditText android:id="@+id/registro_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="Nombre" />

        <EditText android:id="@+id/registro_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="Apellido(s)" />

        <EditText android:id="@+id/numeroCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/numero_cuenta" />

        <EditText android:id="@+id/PIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="PIN" />




        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_registrar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:padding="12dp"
            android:text="@string/alta_cuenta"/>

        <TextView android:id="@+id/regresoLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:onClick="onClick"
            android:clickable="true"
            android:textColor="#000000"
            android:text="@string/acceder"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>